add style for the block header

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Pure JavaScript Excel</title>
 </head>
 
@@ -14,6 +15,17 @@
         <div class="excel">
 
             <div class="excel__header">
+                <input type="text" class="input" value="Новая таблица">
+
+                <div>
+                    <div class="button">
+                        <i class="material-icons">delete</i>
+                    </div>
+                    <div class="button">
+                        <i class="material-icons">exit_to_app</i>
+                    </div>
+
+                </div>
 
             </div>
 
